--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,17 +1,10 @@
-$navigation-height_top: 90px;
-$navigation-height: 60px;
+
+$navigation-height: 75px;
 $horizontal-bar-mode: 900px;
 $navigation-color: transparentize(white, 0.2);
 $navigation-color-hover: white;
 $navigation-z-index: 1000;
 
-$bar-thickness: 5px;
-// The thickness of the button bars
-$button-pad: 24px;
-// The left/right padding between button area and bars.
-$button-bar-space: 8px;
-// The spacing between button bars
-$button-transistion-duration: 0.3s;
 
 // Extends
 %nav-item-link {
@@ -33,7 +26,6 @@ $button-transistion-duration: 0.3s;
 .navigation {
   background: $color-black;
   z-index: $navigation-z-index !important;
-  // border-bottom: 2px solid $color-teal;
   box-shadow: 0px 3px 50px rgba(0, 0, 0, .15);
 
 
@@ -41,7 +33,7 @@ $button-transistion-duration: 0.3s;
 .navigation-menu-button {
   $bar-thickness: 4px;
   $button-pad: 24px;
-  $button-bar-space: 8px;
+  $button-bar-space: 6px;
   $button-transistion-duration: 0.3s;
 
   float: right;
@@ -49,8 +41,8 @@ $button-transistion-duration: 0.3s;
   overflow: hidden;
   margin: 0;
   padding: 0;
-  width: $navigation-height_top;
-  height: $navigation-height_top;
+  width: $navigation-height;
+  height: $navigation-height;
   font-size: 0;
   text-indent: -9999px;
   border-radius: 0;
@@ -69,7 +61,7 @@ $button-transistion-duration: 0.3s;
   span {
     display: block;
     position: absolute;
-    top: $navigation-height_top / 2 - $bar-thickness / 2;
+    top: $navigation-height / 2 - $bar-thickness / 2;
     left: $button-pad;
     right: $button-pad;
     height: $bar-thickness;
@@ -126,33 +118,29 @@ $button-transistion-duration: 0.3s;
 
 
 
-  .navigation-wrapper,
-  .navigation-wrapper-top {
-    @include outer-container;
+  .navigation-wrapper {
+    @include outer-container(100%);
     @include clearfix;
-
     position: relative;
-
-    @include media($large-down) {
-      // padding: 0 15px;
+    @include media($horizontal-bar-mode) {
       margin: 0 2%;
     }
-  }
-
-  .navigation-wrapper {
-    border-top: 1px solid rgba(100, 100, 100, 0.4);
   }
 
   // Logo
   .logo {
     display: inline-block;
     float: left;
-    height: $navigation-height_top;
-    line-height: $navigation-height_top;
+    height: $navigation-height;
+    line-height: $navigation-height;
+    @include margin(null $base-spacing);
+
+    @include media($horizontal-bar-mode) {
+      margin-left: 0;
+    }
 
     img {
-      margin-right: $base-spacing;
-      height: $navigation-height_top / 2;
+      height: $navigation-height / 2;
       max-width: 100%;
     }
   }
@@ -160,31 +148,25 @@ $button-transistion-duration: 0.3s;
 
   // Button
   .button-wrapper {
-    display: none;
-
-    @include media($horizontal-bar-mode) {
-      display: inline-block;
-      float: right;
-      height: $navigation-height_top;
-      line-height: $navigation-height_top;
-      > .btn {
-        margin-bottom: 0;
-      }
+    display: inline-block;
+    float: left;
+    height: $navigation-height;
+    line-height: $navigation-height;
+    > .btn {
+      margin: 0;
     }
   }
 
   nav {
-    border-top: 1px solid rgba(100,100,100, .4);
     float: none;
 
     @include media ($horizontal-bar-mode) {
-      border-top: none;
-      float: left;
-      text-align: center;
+      float: right;
     }
   }
 
   ul.navigation-menu {
+    @include clearfix;
     clear: both;
     display: none;
     margin: 0 auto;
@@ -212,7 +194,7 @@ $button-transistion-duration: 0.3s;
       background: transparent;
       display: inline-block;
       text-decoration: none;
-      margin-right: $base-spacing;
+      margin-left: $base-spacing;
     }
 
 
@@ -256,9 +238,7 @@ $button-transistion-duration: 0.3s;
           text-transform: initial;
           padding: 0 ($small-spacing * 2);
           width: 100%;
-          border-left: none;
-          border-right: none;
-          border-bottom: 1px solid rgba(255, 255, 255, 0.065);
+          border-bottom: 1px solid rgba($white, 0.065);
           padding: 0 ($small-spacing * 2);
           width: 100%;
         }
@@ -273,25 +253,16 @@ $button-transistion-duration: 0.3s;
   position: relative;
   border-left: none;
   border-right: none;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.065);
+  border-bottom: 1px solid rgba($white, 0.065);
   font-size: 14px !important;
+  &:hover {
+    background: rgba($white, 0.03);
+  }
 }
 
-.mobile-on a:hover {
-  background: rgba(255, 255, 255, 0.03);
-}
-
-.mobile-on .js-opened > .mn-has-sub > .fa {
-  border-color: rgba(255, 255, 255, 0.4);
-  border-bottom: 1px solid rgba(255,255,255, .065);
-}
-
-.mobile-on a:hover {
-  background: rgba(255,255,255, .03);
-}
 
 .mobile-on .js-opened > .mn-has-sub > .fa {
-  border-color: rgba(255,255,255, .4);
+  border-color: rgba($white, .4);
   line-height: 16px;
 }
 
@@ -307,7 +278,7 @@ $button-transistion-duration: 0.3s;
   left: $small-spacing;
   margin-top: -$small-spacing;
   text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba($white, 0.1);
   border-radius: 50%;
 }
 
@@ -322,74 +293,4 @@ $button-transistion-duration: 0.3s;
 
 
 
-
-
-
-
-
-// Navbar Search
-
-.navigation-search {
-  float: none;
-  clear: both;
-  display: block;
-  height: $navigation-height;
-  line-height: $navigation-height;
-
-  @include media($horizontal-bar-mode) {
-    background: transparent;
-    float: right;
-    clear: none;
-  }
-
-
-  .search-bar {
-    width: 100%;
-    display: inline-block;
-
-    @include media($horizontal-bar-mode) {
-      width: 150px;
-    }
-
-
-    @include media(1000px) {
-      width: 250px;
-    }
-
-
-    form {
-      position: relative;
-
-      input[type=search] {
-        height: 40px;
-        width: 100%;
-        font-size: 12px;
-        font-weight: 400;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-      }
-
-      .search-button {
-        @include margin(-20px 0 0);
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        padding: 0;
-        position: absolute;
-        top: 50%;
-        right: 1px;
-        overflow: hidden;
-        background: transparent;
-        border: none;
-        outline: none;
-        color: $color-purple_light;
-        font-size: 14px;
-
-        &:hover {
-          color: darken($color-purple, 10%);
-        }
-      }
-    }
-  }
-}
 
